--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
+  google_sign_in: ^6.1.5
+  cloud_firestore: ^4.12.1
+  firebase_auth: ^4.12.0
+  firebase_core: ^2.20.0
 
 dev_dependencies:
   flutter_test:
