--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.12.1
   firebase_auth: ^4.12.0
   firebase_core: ^2.20.0
+  firebase_database: ^10.3.3
 
 dev_dependencies:
   flutter_test:
