--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.12.0
   firebase_core: ^2.20.0
   firebase_database: ^10.3.3
+  animated_bottom_navigation_bar: ^1.3.0
 
 dev_dependencies:
   flutter_test:
