--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^2.20.0
   firebase_database: ^10.3.3
   animated_bottom_navigation_bar: ^1.3.0
+  syncfusion_flutter_calendar: ^23.1.43
 
 dev_dependencies:
   flutter_test:
